# bike-flash-tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  library.properties  links.txt
.github/workflows/: ci.yml
docs/: CMakeLists.txt  conf.py  index.rst  integration.rst  qanda.rst  requirements.txt
docs/arch/: flash-flowchart.drawio
docs/c_api/: flash.rst  index.rst  setup.rst
docs/protocol/: calculation.rst  flow.rst  index.rst  operations.rst
docs/python/: flash_tool.rst  index.rst
docs/tools/: cli.rst  index.rst  ui.rst
examples/arduino/: README.md  arduino.ino
python-lib/: setup.py
python-lib/examples/: flash_target.py
python-lib/line_flash/: __init__.py  cli.py  config.py  constants.py  flash.py  ui.py
python-lib/pyinstaller/: ui-tool.spec
python-lib/tests/: test_cli.py  test_flash.py
python-lib/tests/data/: flash-config.json  network.json  segmented.hex
src/: flash_line_api.h  flash_line_diag.c  flash_line_diag.h
tests/: CMakeLists.txt  test_FlashLine_App.cpp  test_FlashLine_Bootloader.cpp
